Backend: Added get users
